--- a/frontend/items/Boopathi/login.html
+++ b/frontend/items/Boopathi/login.html
@@ -14,10 +14,11 @@
         <div class="login_content">
              <h1>Login page</h1>
              <label for="name">Name</label>
-             <input type="text" name="username"  placeholder="Enter your Username" required id="username">
+             <input name="entry.395478573" type="text" name="username"  placeholder="Enter your Username" required id="username">
              <label for="password">Password</label>
-             <input type="password" id="user_password" name="password" placeholder="Enter your password" required>
+             <input name="entry.1776190424" type="password" id="user_password" name="password" placeholder="Enter your password" required>
              <button>Login</button>
+            </form>
              <p>or</p>
              <p>Login with <span><a href="">Google</a></span></p>
              <p>Create an new Account <span><a href="">Sign In</a></span></p>
