created card component

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi molestias est aperiam minus, suscipit dolor dicta. Ut magni cupiditate, dolorum numquam repellendus, earum error dolores, esse cumque modi dolor voluptatibus? Ex voluptatibus odit quia facilis, harum ullam assumenda quae, optio tempora non consequatur repellat numquam eum quis dolorum! Consequatur, atque.</p>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
