--- a/frontend/items/Boopathi/card.html
+++ b/frontend/items/Boopathi/card.html
@@ -9,10 +9,9 @@
 <body>
     <div class="cart">
         <div class="image_cart">
-            
         </div>
         <div class="cart_content">
-           <h4 style="color:#037014;">Category:Ice Cream</h4>
+           <!-- <h4 style="color:#037014;">Category:Ice Cream</h4> -->
            <h4 style="color: #FA1041;">Chocolate Ice Cream</h4>
            <div style="color: #037014;" class="quantity"><h4>quantity :</h4>
             <p style="color: #037014;" id="Chocolate_ice_cream_quntity">10</p>        
