--- a/frontend/items/Geethu/Carts.html
+++ b/frontend/items/Geethu/Carts.html
@@ -18,18 +18,25 @@
         .container {
             display: flex;
             justify-content: space-between;
+            flex-direction: row; 
+            flex-wrap: wrap;
         }
-        .menu, .cart {
+        .menu, #cart {
             background-color: white;
-            border-radius: 10px;
+            border-radius: 2px;
             padding: 20px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
         }
         .menu {
             width: 65%;
             margin-right: 20px;
         }
-        .cart {
+        .menu span{
+            color: #000000B2;
+            font-size: 14px;
+        }
+        #cart {
             width: 30%;
         }
         h2 {
@@ -45,68 +52,128 @@
             margin-top: 10px;
             margin-bottom: 15px;
             border: 2px solid #e9e8e8;
-            border-radius:10px;
+            border-radius:2px;
             padding-bottom: 10px;
+            box-shadow: 4px 4px 10px 0px #00000040;
         }
         .item img {
-            width: 60px;
+            width: 100px;
+            height: 70px;
             border-radius: 8px;
             margin-right: 10px;
         }
-        .item h3 {
-            font-family: Inter;
-            font-size: 16px;
+        .item p {
+            font-size: 14px;
+            color: #000000;
+            font-weight: bolder;
+        }
+        .text-details {
+            margin-left: 30px;
+            line-height: 30px;
+        }
+        .text-details span {
+            font-size: 24px;
+            color: #FA1041;
             font-weight: 700;
+        }
+        .text-details h3 {
+            font-family: Inter;
             line-height: 29.05px;
             text-align: left;
             color: #FA1041;
+            font-weight: 800;
         }
-        .item p {
-            font-size: 14px;
-            color: #888;
-        }
-        .item span {
-            color: #d10050;
-            font-size: 16px;
-        }
-        button {
+        .item button{
             padding: 8px 16px;
-            background-color: #d10050;
+            background-color: #FA1041;
+            margin-right: 100px;
             color: white;
             border: none;
-            border-radius: 5px;
+            width: 80px;
+            border-radius: 4px;
             cursor: pointer;
         }
         button:hover {
             background-color: darkred;
         }
-        .cart-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-        .cart-item button {
-            background-color: transparent;
-            color: red;
-            font-size: 18px;
-            cursor: pointer;
-            border: none;
-        }
-        .total-amount {
-            font-size: 18px;
-            font-weight: bold;
-        }
-        .cart-item span {
-            color: #333;
-        }
-        .cart-item h3 {
-            color: black;
-        }
-        #note {
-            color: red;
-            margin-top: 20px;
-        }
+        #cart {
+    width: 30%;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#cart h2 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+#cart-items {
+    margin-bottom: 20px;
+}
+
+#cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+    border-bottom: 1px solid #ddd;
+}
+
+#cart-item h3 {
+    font-size: 16px;
+    color: #333;
+    margin-right: 10px;
+}
+
+#cart-item span {
+    font-size: 16px;
+    font-weight: bold;
+    color: #000;
+    margin-right: 10px;
+}
+
+#cart-item button {
+    background-color: transparent;
+    border: none;
+    font-size: 18px;
+    color: red;
+    cursor: pointer;
+}
+
+#total-amount {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 20px;
+    color: #000;
+}
+
+#cart button {
+    color: white;
+    background-color: rgb(241, 124, 124);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+#cart button:hover {
+    background-color:#FA1041;
+}
+
+#note {
+    color: red;
+    font-size: 14px;
+    margin-top: 10px;
+    display: none;
+}
         .item-details {
             display: flex;
             padding: 20px;
@@ -115,106 +182,108 @@
     </style>
 </head>
 <body>
-
-    <div class="container">
-        <div class="menu">
-            <h2>MILK SHAKE'S (3 ITEM'S)</h2>
-            <div class="item">
-                <div class="item-details">
-                    <img src="./images/bread.jpg" alt="Rose Milk Shake">
-                    <div>
-                        <h3>ROSE MILK SHAKE</h3>
-                        <p>Rose With Ice Cream</p>
-                        <span>₹30</span>
-                    </div>
+<div class="container">
+    <div class="menu">
+        <h2>MILK SHAKE'S <span>(3 ITEM'S)</span></h2>
+        <div class="item">
+            <div class="item-details">
+                <img src="./images/bread.jpg" alt="Rose Milk Shake">
+                <div class="text-details">
+                    <h3>ROSE MILK SHAKE</h3>
+                    <p>Rose With Ice Cream</p>
+                    <span>₹30</span>
                 </div>
-                <button onclick="addToCart('ROSE MILK', 30)">ADD</button>
             </div>
-            <div class="item">
-                <div class="item-details">
-                    <img src="./images/bread.jpg" alt="Chocolate Milk Shake">
-                    <div>
-                        <h3>CHOCOLATE MILK SHAKE</h3>
-                        <p>Chocolate With Ice Cream</p>
-                        <span>₹30</span>
-                    </div>
-                </div>
-                <button onclick="addToCart('CHOCOLATE MILK', 30)">ADD</button>
-            </div>
-
-            <h2>SANDWICH (3 ITEM'S)</h2>
-            <div class="item">
-                <div class="item-details">
-                    <img src="./images/bread.jpg" alt="Veg Sandwich">
-                    <div>
-                        <h3>VEG - SANDWICH</h3>
-                        <p>Bread tomato and etc</p>
-                        <span>₹25</span>
-                    </div>
-                </div>
-                <button onclick="addToCart('VEG SANDWICH', 25)">ADD</button>
-            </div>
-            <div class="item">
-                <div class="item-details">
-                    <img src="./images/bread.jpg" alt="Veg Burger">
-                    <div>
-                        <h3>VEG - BURGER</h3>
-                        <p>Bread tomato and etc</p>
-                        <span>₹40</span>
-                    </div>
-                </div>
-                <button onclick="addToCart('VEG BURGER', 40)">ADD</button>
-            </div>
+            <button onclick="addToCart('ROSE MILK', 30)">ADD</button>
         </div>
 
-        <div class="cart">
-            <h2>Your Cart (<span id="cart-items-count">0</span> Items)</h2>
-            <div id="cart-items"></div>
-            <h3>Total Amount: ₹<span id="total-amount">0</span></h3>
-            <button onclick="placeOrder()">PLACE ORDER NOW</button>
-            <p id="note">NOTE: You get extra one rose milk</p>
+        <div class="item">
+            <div class="item-details">
+                <img src="./images/bread.jpg" alt="Chocolate Milk Shake">
+                <div class="text-details">
+                    <h3>CHOCOLATE MILK SHAKE</h3>
+                    <p>Chocolate With Ice Cream</p>
+                    <span>₹30</span>
+                </div>
+            </div>
+            <button onclick="addToCart('CHOCOLATE MILK', 30)">ADD</button>
         </div>
     </div>
+    <div id="cart">
+        <h2>Your Cart (<span id="cart-items-count">0</span> Items)</h2>
+        <div id="cart-items"></div>
+        <h3>Total Amount: ₹<span id="total-amount">0</span></h3>
+        <button id="cart-button" onclick="placeOrder()">PLACE ORDER NOW</button>
+        <p id="note">NOTE: You get an extra rose milk!</p>
+    </div>
+    <div class="menu">
+        <h2>SANDWICH <span>(3 ITEM'S)</span></h2>
+        <div class="item">
+            <div class="item-details">
+                <img src="./images/bread.jpg" alt="Veg Sandwich">
+                <div class="text-details">
+                    <h3>VEG - SANDWICH</h3>
+                    <p>Bread tomato and etc</p>
+                    <span>₹25</span>
+                </div>
+            </div>
+            <button onclick="addToCart('VEG SANDWICH', 25)">ADD</button>
+        </div>
+        <div class="item">
+            <div class="item-details">
+                <img src="./images/bread.jpg" alt="Veg Burger">
+                <div class="text-details">
+                    <h3>VEG - BURGER</h3>
+                    <p>Bread tomato and etc</p>
+                    <span>₹40</span>
+                </div>
+            </div>
+            <button onclick="addToCart('VEG BURGER', 40)">ADD</button>
+        </div>
+    </div>
+</div>
 
-    <script>
-        let cart = [];
-        let totalAmount = 0;
+<script>
+    let cart = [];
+    let totalAmount = 0;
 
-        function addToCart(item, price) {
-            cart.push({ item, price });
-            totalAmount += price;
-            updateCart();
-        }
+    function addToCart(item, price) {
+        cart.push({ item, price });
+        totalAmount += price;
+        updateCart();
+    }
 
-        function updateCart() {
-            const cartItemsContainer = document.getElementById("cart-items");
-            cartItemsContainer.innerHTML = "";
+    function updateCart() {
+        const cartItemsContainer = document.getElementById("cart-items");
+        cartItemsContainer.innerHTML = "";
 
-            cart.forEach((cartItem, index) => {
-                const itemElement = document.createElement("div");
-                itemElement.classList.add("cart-item");
-                itemElement.innerHTML = `
-                    <h3>${cartItem.item}</h3>
-                    <span>₹${cartItem.price}</span>
-                    <button onclick="removeFromCart(${index})">❌</button>
-                `;
-                cartItemsContainer.appendChild(itemElement);
-            });
+        cart.forEach((cartItem, index) => {
+            const itemElement = document.createElement("div");
+            itemElement.classList.add("cart-item");
+            itemElement.innerHTML = `
+                <h3>${cartItem.item}</h3><span>₹${cartItem.price}</span>
+                <button onclick="removeFromCart(${index})">❌</button>
+            `;
+            cartItemsContainer.appendChild(itemElement);
+        });
 
-            document.getElementById("total-amount").textContent = totalAmount;
-            document.getElementById("cart-items-count").textContent = cart.length;
-        }
+        document.getElementById("total-amount").textContent = totalAmount;
+        document.getElementById("cart-items-count").textContent = cart.length;
 
-        function removeFromCart(index) {
-            totalAmount -= cart[index].price;
-            cart.splice(index, 1);
-            updateCart();
-        }
+        const roseMilkCount = cart.filter(item => item.item === 'ROSE MILK').length;
+        document.getElementById("note").style.display = roseMilkCount > 1 ? 'block' : 'none';
+    }
 
-        function placeOrder() {
-            alert(`Your order is placed. Total Amount: ₹${totalAmount}`);
-        }
-    </script>
+    function removeFromCart(index) {
+        totalAmount -= cart[index].price;
+        cart.splice(index, 1);
+        updateCart();
+    }
+
+    function placeOrder() {
+        alert(`Your order is placed. Total Amount: ₹${totalAmount}`);
+    }
+</script>
 
 </body>
 </html>
