Food category component added

--- a/frontend/items/Boopathi/offer.html
+++ b/frontend/items/Boopathi/offer.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h2>Our Food Category</h2>
-    <main >
-        <div>
+    <div class="main" >
+        <div class="div">
             <img src="image1.png" alt="">
             <p>Noodles</p>
         </div>
@@ -38,6 +38,6 @@
             <p>Lemon Juice</p>
         </div>
         
-    </main>
+    </div>
 </body>
 </html>
