made a layout for food menu screen

--- a/frontend/items/Boopathi/card.html
+++ b/frontend/items/Boopathi/card.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="card.css">
 </head>
+
 <body>
     <div class="cart">
         <div class="image_cart">
         </div>
         <div class="cart_content">
-           <!-- <h4 style="color:#037014;">Category:Ice Cream</h4> -->
-           <h4 style="color: #FA1041;">Chocolate Ice Cream</h4>
-           <div style="color: #037014;" class="quantity"><h4>quantity :</h4>
-            <p style="color: #037014;" id="Chocolate_ice_cream_quntity">10</p>        
-        </div>
-           
-           <div class="cart_footer">
-               <button>
-                  Add Cart
-               </button>
-               <p>Price :$ 10</p>
-           </div>
+            <!-- <h4 style="color:#037014;">Category:Ice Cream</h4> -->
+            <h4 style="color: #FA1041;">Chocolate Ice Cream</h4>
+            <div style="color: #037014;" class="quantity">
+                <h4>quantity :</h4>
+                <p style="color: #037014;" id="Chocolate_ice_cream_quntity">10</p>
+            </div>
+
+            <div class="cart_footer">
+                <button>
+                    Add Cart
+                </button>
+                <p>Price :$ 10</p>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
