--- a/frontend/items/Boopathi/login.html
+++ b/frontend/items/Boopathi/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <main class="login">
+    <div class="login">
         <div class="login_image">
               <img src="login_image.png" alt="">
         </div>
@@ -22,6 +22,6 @@
              <p>Login with <span><a href="">Google</a></span></p>
              <p>Create an new Account <span><a href="">Sign In</a></span></p>
         </div>
-    </main>
+    </div>
 </body>
 </html>
