--- a/frontend/items/Geethu/history.html
+++ b/frontend/items/Geethu/history.html
@@ -85,8 +85,8 @@
         }
 
         .qr-code {
-            width: 100px;
-            height: auto;
+            width: 80px;
+            height: 80px;
         }
 
         .text-style-history{
