--- a/frontend/items/Geethu/Offers.html
+++ b/frontend/items/Geethu/Offers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,14 +74,14 @@
             position: absolute;
             bottom: 15px;
             left: 15px;
-            color: white;
+            color: black;
             font-size: 16px;
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
-
     </style>
 </head>
+
 <body>
 
     <div class="offer-section">
@@ -114,4 +115,5 @@
     </div>
 
 </body>
+
 </html>
